we don't do FAT

--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -199,7 +199,7 @@ READ_BL_LEN=15, C_SIZE_MULT=7, C_SIZE=3197
 size = 4208984064
 </pre>
 
-afterwards, you can read ext2 and fat filesystems like:
+afterwards, you can read ext2 filesystems like:
 <pre>
 QT2410 # ext2ls mmc 0
 <DIR>       1024 .
