/* Writing new bootloader to NAND */

--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -252,8 +252,8 @@ bootloader flash partition:
 
 <pre>
 QT2410 # ext2load mmc 0 0x32000000 u-boot.bin
-QT2410 # nand erase 0x00000000 0x30000
-QT2410 # nand write 0x32000000 0x00000000 0x30000
+QT2410 # nand erase u-boot
+QT2410 # nand write 0x32000000 u-boot
 </pre>
 
 ==== Writing kernel to NAND ====
