--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -263,8 +263,8 @@ kernel flash partition:
 
 <pre>
 QT2410 # ext2load mmc 0 0x32000000 uImage
-QT2410 # nand erase 0x00034000 0x200000
-QT2410 # nand write.e 0x32000000 0x00034000 0x200000
+QT2410 # nand erase kernel
+QT2410 # nand write.e 0x32000000 kernel
 </pre>
 
 ==== Writing rootfs to NAND ====
