/* Flashing a root filesystem into NAND */

--- a/Userspace_root_image.mw
+++ b/Userspace_root_image.mw
@@ -22,14 +22,4 @@ Please note that this image will take ages to boot the first time, since this bo
 
 == Flashing a root filesystem into NAND ==
 
-The image can then be installed on the target device via the [[u-boot]] bootloader, e.g.
-
- QT2410 # tftpboot 0x32000000 rootfs.jffs2
- QT2410 # nand erase 0x634000 0x39cc000
- QT2410 # nand write.e 0x32000000 0x634000 0x700000
-
-And then booted (in this example with a kernel downloaded via tftp/ethernet) by
-
- QT2410 # setenv  bootargs root=/dev/mtdblock4 rootfstype=jffs2 console=ttySAC0,115200 loglevel=8
- QT2410 # tftpboot 0x32000000 kernel.img
- QT2410 # bootm 0x32000000
+See [[U-boot#Writing_rootfs_to_NAND]]
