*Empty MediaWiki Message*

--- a/S3c2410_boot_usb.mw
+++ b/S3c2410_boot_usb.mw
@@ -1,6 +1,8 @@
 == General ==
 
-A small linux program for downlading executable code (such as boot-loader) into QT2410 RAM.
+A small linux program for downlading executable code (such as boot-loader) into [[QT2410]] RAM.
+
+This only works with the [[QT2410]] development board, since it has the corresponding receiver program in NOR flash.
 
 == Source code ==
 
