--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -17,6 +17,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Debug Board]] -- The debug board for Neo1973 hardware
 ** [[Connecting_GTA01Bv2_with_Debug_Board]]
 ** [[Debug Board v1]] - The previous version of the Debug Board
+* [[QT2410]] - A S3C2410 development board that was used during early development
 
 == Software ==
 
