--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -56,13 +56,13 @@ Hammerhead AGPS from Global Locate.
 * Driver: Implemented as userspace agps daemon (agpsd)
 * PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
 
-=== SD-Card ===
+=== microSD-Card ===
 
-The Neo1973 has one MicroSD aka Transflash slot.
+The Neo1973 has one microSD aka Transflash slot.
 * Connected to: S3C2410 MMC/SD controller
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c_mci.patch
 * Backlight Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-backlight.patch
-
+* [[Supported microSD cards]]
 
 === LCD Display Module (LCM) ===
 
