--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -50,6 +50,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Widget Inheritance Graph]]
 * [[How to run OpenMoko Apps on PC]]
 * [[OpenMoko#Setting_up_an_OpenMoko_SDK]]
+* [[License]] - How we license our code
 
 == Development ==
 * [[Development resources]] - Describes the resources (lists, svn, ...)
