--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -9,6 +9,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 == Documentation ==
 
 * [[Documentation]] - End-user related documentation
+** [[Getting Started with your Neo1973]]
 
 == Hardware ==
 
