fully wiki-converted version of werners original text file

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -77,22 +77,16 @@ There must be at least 7 GB of free space on $OMDIR.
 
 In addition to the traditional development tools (gcc, patch, etc.), the
 following packages must be installed on the build host:
-<pre>
-#   subversion	version control system used by OpenMoko and others
-#   quilt	patch management system used by the Linux kernel and others
-#   monotone	version control system used by OpenEmbedded. Needs a recent
-#		version, e.g., 0.32, although also 0.31 should work.
-#   diffstat	the OE build process wants this
-#   texi2html	this too
-#   git		version control system used by the Linux kernel and others.
-#		Do not confuse this with the "GNU Interactive Tools"
-</pre>
+
+* subversion	version control system used by OpenMoko and others
+* quilt	patch management system used by the Linux kernel and others
+* monotone	version control system used by OpenEmbedded. Needs a recent version, e.g., 0.32, although also 0.31 should work.
+* diffstat	the OE build process wants this
+* texi2html	this too
+* git		version control system used by the Linux kernel and others. Do not confuse this with the "GNU Interactive Tools"
 
 Furthermore, the following package can be installed optionally:
-<pre>
-#   psycho	Python just-in-time compiler. Speeds up BitBake considerably.
-#		Strongly recommended.
-</pre>
+* psycho	Python just-in-time compiler. Speeds up BitBake considerably. Strongly recommended.
 
 Gentoo users can obtain all this with (note that, at the time of writing, Monotone 0.32 isn't available without setting the ~x86 keyword):
 
@@ -381,7 +375,7 @@ which is shown at the end of "fatload" or "ext2load".
 
  GTA01Bv2 # fatload mmc 0 0x32000000 rootfs.jffs2
 
-{note|It will say something like "22724608 bytes read". You can convert this to hex, e.g., with bc:
+{{note|It will say something like "22724608 bytes read". You can convert this to hex, e.g., with bc:
  % bc
  obase=16
  22724608
@@ -393,33 +387,23 @@ which is shown at the end of "fatload" or "ext2load".
 
 The last argument is the hex number obtained from "bc"
 
-###  Configure the boot loader  ###############################################
-#
-# Last but not least, we have to set up the boot loader to automatically boot
-# from Flash. This is in fact easy, since we've already wiped out the
-# environment, and can thus simply let it restore the default settings.
-#
+=== Configure the boot loader ===
 
-#
-# ---------- We reset to force the boot loader to use the default settings.
-#
-# GTA01Bv2 # reset
-#
-# ---------- Wait until the "U-Boot [...]" message, then hit a key.
-# ---------- It will display 
-# ---------- "*** Warning - bad CRC or NAND, using default environment"
-#
-# ---------- Save the restored settings in NAND
-#
-# GTA01Bv2 # saveenv
-#
-# ---------- Power cycle to boot the Neo (see remarks above)
-#
+Last but not least, we have to set up the boot loader to automatically boot
+from Flash. This is in fact easy, since we've already wiped out the
+environment, and can thus simply let it restore the default settings.
 
+* We reset to force the boot loader to use the default settings.
+ GTA01Bv2 # reset
 
-###  END  #####################################################################
-#
-# Congratulations ! You've just completed level 1 of the OpenMoko adventure.
-#
-###############################################################################
-</pre>
+Wait until the "U-Boot [...]" message, then hit a key. It will display 
+ *** Warning - bad CRC or NAND, using default environment
+
+* Save the restored settings in NAND
+ GTA01Bv2 # saveenv
+
+* Power cycle to boot the Neo (see remarks above)
+
+===  END ===
+
+Congratulations ! You've just completed level 1 of the OpenMoko adventure.
