make it hierarchical

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -20,6 +20,8 @@ process. Furthermore, naming and other preferences are my own, may have
 little to do with what is considered common or even "official" style. If you
 find anything particularly stupid, please let me know
 
+== Preparation ==
+
 ===  Roles  ===
 
 The build process may spread over multiple machines. They have the following
@@ -126,6 +128,8 @@ There are the following assumptions about hardware setup and devices:
 * cards inserted in the SD/MMC card reader appear as /dev/uba on CARD and can be mounted on /mnt/tmp (we'll specify the mount point explicitly, so it only has to be there, but we don't need /etc/fstab to reflect this). If in doubt,
  mkdir -p /mnt/tmp
 
+== Obtaining Sources and build system ==
+
 ===  OpenEmbedded build: initial downloads (BUILD) ===
 First, we obtain a snapshot of the OpenEmbedded-based tree used by OpenMoko, plus the OE build tool called BitBake.
 
@@ -203,6 +207,8 @@ The following fixes work around them:
 
  perl -pi.orig -e 's/ *$//;s/\r//g' ../openembedded/packages/gcc/gcc-4.1.1/gcc-4.1.1-pr13685-1.patch
 
+== Building ==
+
 === OpenEmbedded build (BUILD) ===
 
 openmoko/trunk/oe/conf/site.conf expects the OpenMoko-specific OE packages in $OMDIR/oe
@@ -236,6 +242,8 @@ blocks, you can proceed safely, and migrate later.
 {note|if your OpenMoko tree is considerably newer than SVN revision 687, even
 the default kernel may already support bad blocks. The instructions below
 will then need updating}
+
+== Installation ==
 
 === Flash boot loader into NAND (LAB) ===
 
