--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -412,6 +412,6 @@ Wait until the "U-Boot [...]" message, then hit a key. It will display
 
 * Power cycle to boot the Neo (see remarks above)
 
-===  END ===
+==  END ==
 
 Congratulations ! You've just completed level 1 of the OpenMoko adventure.
