move toc to the right

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -1,3 +1,7 @@
+{|align=right
+ |__TOC__
+ |}
+
 '''Building OpenMoko from scratch'' Walk-Through
 
 according to Werner Almesberger <werner@openmoko.org>.
