--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -10,7 +10,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 
 * [[Documentation]] - End-user related documentation
 ** [[Getting Started with your Neo1973]]
-** [[Building_OpenMoko_from_scratch]]
+** [[Building OpenMoko from scratch]]
 
 == Hardware ==
 
