--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -18,9 +18,9 @@ The main Processor (CPU) of the Neo1973 is a Samsung S3C2410AL-26 (Capable of ru
 * Data Sheet: http://www.samsung.com/Products/Semiconductor/NANDFlash/SLC_SmallBlock/512Mbit/K9F1208U0B/ds_k9f1208x0b_rev03.pdf
 * Connected to: S3C2410 NAND controller
 
-This is the only flash memory in the device.  The S3C2410 boots directly from nand, using the [[Steppingstone]].
+This is the only flash memory in the device.  The S3C2410 boots directly from nand, using the [[S3C2410 Steppingstone]].
 
-We only use free software, no proprietary flash file systems.  For a full description of how it is used, see [[NAND_bad_blocks]]
+We only use free software, no proprietary flash file systems.  For a full description of how it is used, see [[NAND bad blocks]]
 
 === RAM ===
 
