--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -105,11 +105,19 @@ The USB Device controller is inside the S3C2410
 
 ==== Wolfson Codec ====
 
-There's a WM8573 Wolfson Microelectronics Codec.
+There's a WM8753 Wolfson Microelectronics Codec.
 * Product Homepage: http://www.wolfsonmicro.com/products/WM8753/
 * Data Sheet: http://www.wolfsonmicro.com/uploads/documents/en/WM8753.pdf
-* Connected to: S3C2410 IIS interface
+* Connected to: S3C2410 IIS interface (PCM data), S3C2410 I2C (Control)
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/asoc.patch
+
+==== Stereo Amplifier ====
+
+There's a National Semiconductor LM4857 Stereo Amplifier at the analog audio output of the WM8753
+
+* Product Homepage: http://www.national.com/pf/LM/LM4857.html
+* Data Sheet: http://www.national.com/ds.cgi/LM/LM4857.pdf
+* Connects to: S3C2410 I2C (Control)
 
 ==== Analog wired Headset ====
 
