--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -103,6 +103,8 @@ The USB Device controller is inside the S3C2410
 
 === Audio ===
 
+See also: [[Neo1973 Audio Subsystem]]
+
 ==== Wolfson Codec ====
 
 There's a WM8753 Wolfson Microelectronics Codec.
