--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -53,15 +53,12 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[How to run OpenMoko Apps on PC]]
 * [[OpenMoko#Setting_up_an_OpenMoko_SDK]]
 * [[License]] - How we license our code
-
-== Development ==
 * [[Development resources]] - Describes the resources (lists, svn, ...)
-
-
 
 == Research and Reference Information ==
 * [[Shipping Notes]] - Information to help us how to ship phones to you.
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented someday
+* [[Press coverage]] - What the press tells about us
 
 == Getting started with this wiki ==
 
