--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -11,6 +11,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Documentation]] - End-user related documentation
 ** [[Getting Started with your Neo1973]]
 ** [[Building OpenMoko from scratch]]
+** [[Migration to bad block tolerant builds]]
 
 == Hardware ==
 
