--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -59,7 +59,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 == Research and Reference Information ==
 * [[Shipping Notes]] - Information to help us how to ship phones to you.
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented someday
-* [[Press coverage]] - What the press tells about us
+* [[Press Coverage]] - What the press tells about us
 
 == Getting started with this wiki ==
 
