--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -52,7 +52,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Coding Guidelines]]
 * [[Widget Inheritance Graph]]
 * [[How to run OpenMoko Apps on PC]]
-* [[OpenMoko#Setting_up_an_OpenMoko_SDK]]
+* [[OpenMoko#Setting_up_an_OpenMoko_SDK|How to setup the OpenMoko SDK]]
 * [[License]] - How we license our code
 * [[Development resources]] - Describes the resources (lists, svn, ...)
 
