--- a/Neo_1973_OpenOCD.mw
+++ b/Neo_1973_OpenOCD.mw
@@ -19,9 +19,9 @@ We now have a Debian binary package of OpenOCD, available from http://people.gta
 
 === Source Code ===
 
-OpenOCD Revision 82 has been proven to work with our QT2410 target board and wiggler.  You can check rev. 82 out of the OpenOCD subversion via
+OpenOCD Revision 82 and later have been proven to work with our [[QT2410]] and [[Neo1973]] target board and wiggler as well as Amontect JTAGkey and JTAGkey tiny.  You can e.g. check rev. 130 out of the OpenOCD subversion via
 
- svn co -r 82 http://svn.berlios.de/svnroot/repos/openocd/trunk
+ svn co -r 130 http://svn.berlios.de/svnroot/repos/openocd/trunk
 
 == Configuration ==
 
