--- a/Neo_1973_OpenOCD.mw
+++ b/Neo_1973_OpenOCD.mw
@@ -32,3 +32,7 @@ OpenOCD Revision 82 and later have been proven to work with our [[QT2410]] and [
 * CP15 register read/write of ARM920T core not working
 
 This has been reported upstream. Bugfix pending.
+
+== OpenOCD and [[Debug Board v2]]
+
+If you wan to use OpenOCD with our Debug Board v2, and want to use the serial port simultaneously with OpenOCD, you '''need libftdi-0.8 or later'''.  Chances are high that your distribution still ships an earlier version of libftdi, so you might want to download it from http://www.intra2net.com/de/produkte/opensource/ftdi/ and build yourself.
