--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -135,7 +135,8 @@ This one is wired via PCM bus from the CSR Bluetooth chip to the Wolfson codec.
 
 A Philips PCF50606 is used for power management.
 
-* Data Sheet: http://www.rockbox.org/twiki/pub/Main/DataSheets/pcf50606.pdf
+* Data Sheet: http://www.nxp.com/acrobat/literature/9397/75009763.pdf
+* User Manual: http://www.rockbox.org/twiki/pub/Main/DataSheets/pcf50606.pdf
 * Connected to: S3C2410 via I2C, client address is 0x08. 
 * Driver Source: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-pcf50606.patch
 
