/* Tools on the host PC */

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -25,10 +25,10 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 == Software ==
 
 === Tools on the host PC ===
-* [[sjf2410-linux]]
+* [[sjf2410-linux]] - for un-bricking your Neo1973
 * [[s3c2410_boot_usb]]
 * [[Toolchain]]
-* [[OpenOCD]]
+* [[OpenOCD]] - On chip debugger
 
 === For the target platform ===
 * Low-level
