fixed various minor formatting issues, most related to broken newline handling in MediaWiki

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -140,8 +140,7 @@ Gentoo users can obtain this with:
 There are the following assumptions about hardware setup and devices:
 
 * the serial console of the Neo phone is connected to /dev/ttyS0 on LAB [[Debug_Board]]
-* the JTAG [[wiggler]] is connected to /dev/parport0 on LAB. See [[Debug Board]] and 
-[[Connecting_GTA01Bv2_with_Debug_Board]]
+* the JTAG [[wiggler]] is connected to /dev/parport0 on LAB. See [[Debug Board]] and  [[Connecting_GTA01Bv2_with_Debug_Board]]
 * cards inserted in the SD/MMC card reader appear as /dev/uba on CARD and can be mounted on /mnt/tmp (we'll specify the mount point explicitly, so it only has to be there, but we don't need /etc/fstab to reflect this). If in doubt,
  mkdir -p /mnt/tmp
 
@@ -265,7 +264,7 @@ working properly during this test run), and ends with a message like this:
    Attempted builds: 4
 
 
-{{note|THE INSTRUCTIONS BELOW YIELD A SETUP WITHOUT BAD BLOCK HANDLING}
+{{note|THE INSTRUCTIONS BELOW YIELD A SETUP WITHOUT BAD BLOCK HANDLING}}
 
 We're in the process of migrating to a configuration of u-boot and kernel
 that can skip bad blocks in the NAND Flash. If your NAND Flash has no bad
@@ -406,8 +405,7 @@ See also: [[U-boot]]
 
  GTA01Bv2 # nand erase 0x30000 0x3fd0000
 
-* Initialize the SD/MMC interface. The "Product Name" shown will be
-just binary garbage. This is expected behaviour.
+* Initialize the SD/MMC interface. The "Product Name" shown will be just binary garbage. This is expected behaviour.
 
  GTA01Bv2 # mmc
 
@@ -420,8 +418,7 @@ just binary garbage. This is expected behaviour.
 
  GTA01Bv2 # nand write.e 0x32000000 0x00034000 0x200000
 
-* The root file system is next. We need to specify the correct size,
-which is shown at the end of "fatload" or "ext2load".
+* The root file system is next. We need to specify the correct size, which is shown at the end of "fatload" or "ext2load".
 
  GTA01Bv2 # fatload mmc 0 0x32000000 rootfs.jffs2
 
