partial conversion from VFAT to ext2

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -401,7 +401,7 @@ See also: [[U-boot]]
 * Load the uImage file into memory. 
 {{note|this assumes we're using FAT. Use "ext2load" instead if using ext2}}
 
- GTA01Bv2 # fatload mmc 0 0x32000000 uImage
+ GTA01Bv2 # ext2load mmc 0 0x32000000 uImage
 
 * Write the uImage from memory to NAND Flash
 
@@ -409,7 +409,7 @@ See also: [[U-boot]]
 
 * The root file system is next. We need to specify the correct size, which is shown at the end of "fatload" or "ext2load".
 
- GTA01Bv2 # fatload mmc 0 0x32000000 rootfs.jffs2
+ GTA01Bv2 # ext2load mmc 0 0x32000000 rootfs.jffs2
 
 {{note|It will say something like "22724608 bytes read". You can convert this to hex, e.g., with bc:
  % bc
@@ -422,7 +422,6 @@ See also: [[U-boot]]
  GTA01Bv2 # nand write.e 0x32000000 0x00634000 0x15AC000
 
 The last argument is the hex number obtained from "bc"
-
 
 === Configure the boot loader ===
 '''(Role: LAB)'''
