fixed line break

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -185,8 +185,7 @@ mtn --db=OE.mtn checkout --branch=org.openembedded.dev \
   -r f499733e6db527846e1a48cf70f9862d6b3798ae openembedded
 </pre>
 
-{{note|For advanced users: if you ever want to update to the latest version of
-the repository, you would do a "pull" (see above), followed by:
+{{note|For advanced users: if you ever want to update to the latest version of the repository, you would do a "pull" (see above), followed by:
  cd $OMDIR/openembedded && mnt update}}
 
 
@@ -202,7 +201,6 @@ DISTRO = "openmoko"
 BUILD_ARCH = "`uname -m`"
 EOF
 </pre>
-
 
 === OpenEmbedded build: fixes ===
 '''(Role: BUILD)'''
