*Empty MediaWiki Message*

--- a/Advanced_End-user.mw
+++ b/Advanced_End-user.mw
@@ -1,3 +1,5 @@
 In this section you will find information geared towards users that wants to experiment with their Neo, but without doing actual programming.
 
 This will include installing experimental software, configuring advanced options, and making scripts for automating tasks.
+
+Currently this section is empty.
