Moved system developer to separate page

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -22,24 +22,9 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 ** [[Debug Board v1]] - The previous version of the Debug Board
 * [[QT2410]] - A S3C2410 development board that was used during early development
 
-== Software ==
+== System Developer ==
 
-=== Tools on the host PC ===
-* [[sjf2410-linux]] - for un-bricking your Neo1973
-* [[s3c2410_boot_usb]]
-* [[Toolchain]]
-* [[OpenOCD]] - On chip debugger
-
-=== For the target platform ===
-* Low-level
-** [[u-boot]] - The bootloader that we use
-** [[Kernel]] - The Linux Kernel of the Neo1973
-* Userspace
-** [[gsmd]] - The gsm daemon talking to the GSM Modem
-** [[agpsd]] - The gps daemon talking to the GPS Unit
-** [[OpenMoko]] distribution
-*** [[OpenMoko2007]] is our first release
-*** [[Userspace root image]]
+[[System Developer]] - Information for the system developer including bootloader, kernel, and libraries.
 
 === User Interface Related ===
 * [[Look & Feel]]
