--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -1,6 +1,7 @@
 Architecture of the second version of the Neo1973 debug board:
-[[Image:Debugboard v2 concept.jpg]]
 
+[[Image:Debugboard v2 concept.jpg|thumb|500px]]
+[[Image:Neo1973 debugboard v2 top.jpg|thumb|500px]]
 
 == Overview ==
 
