--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -5,6 +5,13 @@
 
 This is to be the evolving, definitive resource on [[Neo1973]] development -- the GSM+AGPS Smartphone running [[OpenMoko]].  The intention is to collaboratively improve and update all information on this site.
 
+== Sections ==
+
+* [[Basic End-user]] - Information for end users that want basic functionality and no surprises
+* [[Advanced End-user]] - Information for advanced end-users that want advanced and experimental functionality
+* [[Application Developer]] - Information for application developers including ideas and specifications for applications, and tools to build them
+* [[System Developer]] - Information for the system developer including bootloader, kernel, and libraries
+* [[Hardware Developer]] - Information for the hardware developer including hardware specs, and debug board
 
 == Documentation ==
 
@@ -13,18 +20,6 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 ** [[Building OpenMoko from scratch]]
 ** [[Migration to bad block tolerant builds]]
 
-== Hardware ==
-
-* [[Neo1973 Hardware]] - The first FIC phone with OpenMoko
-** [[Disassembling Neo1973]] - A photo story about disassembling the hardware
-* [[Debug Board]] -- The debug board for Neo1973 hardware
-** [[Connecting_GTA01Bv2_with_Debug_Board]]
-** [[Debug Board v1]] - The previous version of the Debug Board
-* [[QT2410]] - A S3C2410 development board that was used during early development
-
-== System Developer ==
-
-[[System Developer]] - Information for the system developer including bootloader, kernel, and libraries.
 
 === User Interface Related ===
 * [[Look & Feel]]
