*Empty MediaWiki Message*

--- a/Advanced_End-user.mw
+++ b/Advanced_End-user.mw
@@ -2,4 +2,9 @@ In this section you will find information geared towards users that wants to exp
 
 This will include installing experimental software, configuring advanced options, and making scripts for automating tasks.
 
-Currently this section is empty.
+As most advanced use with the phone currently requires programming this section is currently empty.
+
+See:
+
+* [[System Developer]]
+* [[Application Developer]]
