*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -8,7 +8,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 == Sections ==
 
 * [[Basic End-user]] - Information for end users that want basic functionality and no surprises
-* [[Advanced End-user]] - Information for advanced end-users that want advanced and experimental functionality
+* [[Advanced End-user]] - Information for advanced end-users that want advanced and experimental functionality but who are not programmers
 * [[Application Developer]] - Information for application developers including ideas and specifications for applications, and tools to build them
 * [[System Developer]] - Information for the system developer including bootloader, kernel, and libraries
 * [[Hardware Developer]] - Information for the hardware developer including hardware specs, and debug board
