add safety notes

--- a/Connecting_Neo_1973_with_Debug_Board_v2.mw
+++ b/Connecting_Neo_1973_with_Debug_Board_v2.mw
@@ -2,6 +2,8 @@
 
 == Debug Board v2 side ==
 
+{{note|Only do this while the Debug Board is unpowered, i.e. the USB Upstream port is not connected}}
+
 === Debug Board v2 connector closed ===
 [Image:Neo1973 debugboard v2 connector closed.jpg|700px]]
 
@@ -16,6 +18,7 @@
 
 == Neo1973 side ==
 
+{{note|Only do this while the Neo1973 is unpowered, i.e. the battery removed and the USB Upstream port is not plugged into a powered hub}}
 === Neo1973 connector closed ==
 [[Image:Gta01b v2 debugport closed.jpg|700px]]
 
