--- a/Connecting_Neo_1973_with_Debug_Board_v2.mw
+++ b/Connecting_Neo_1973_with_Debug_Board_v2.mw
@@ -19,7 +19,7 @@
 == Neo1973 side ==
 
 {{note|Only do this while the Neo1973 is unpowered, i.e. the battery removed and the USB Upstream port is not plugged into a powered hub}}
-=== Neo1973 connector closed ==
+=== Neo1973 connector closed ===
 [[Image:Gta01b v2 debugport closed.jpg|700px]]
 
 === Neo1973 connector open ===
