--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -46,7 +46,7 @@ The serial port needs a tri-state driver, since it is both connected to the GSM 
 
 == Usage Instructions ==
 
-We currently only have a photo story for the old Debug board: [[Connecting_GTA01Bv2_with_Debug_Board]]
+* [[Connecting Neo1973 with Debug Board v2]]
 
 == History ==
 
