de-individualized the introduction, improved some markup

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -2,25 +2,16 @@
  |__TOC__
  |}
 
-... according to Werner Almesberger <werner@openmoko.org>.
-
-
-This is a guide describing how I set up a running OpenMoko
+This is a guide describing how to set up a running OpenMoko
 system from scratch.
 
-Do not treat this like a shell script! There are various configuration items you
+Do not treat this as a linear script! There are various configuration items you
 need to set (or skip, as it may be), operations that depend on how your
 host(s) are set up, and also on the revision of the target platform.
 
 Instead, look at each step, read the instructions, and copy and paste what
 makes sense for you, and adapt what you disagree with. Links to original and
 background material in the Wiki are included wherever useful.
-
-Please note that this file isn't actively maintained and is guaranteed to
-suffer bit rot as I begin to use more and more shortcuts in the build
-process. Furthermore, naming and other preferences are my own, may have
-little to do with what is considered common or even "official" style. If you
-find anything particularly stupid, please let me know
 
 
 == Preparation ==
@@ -30,12 +21,12 @@ find anything particularly stupid, please let me know
 The build process may spread over multiple machines. They have the following
 roles:
 
-* BUILD - build host, with quick access to the files and CPU power. Must have Internet access.
-* LAB - lab machine connected to the debug board (serial and JTAG) and to USB on the Neo (since this will probably be just a single machine, the roles are not further divided)
-* CARD - machine with a USB-attached SD/MMC card reader
+;BUILD: build host, with quick access to the files and CPU power. Must have Internet access.
+;LAB: lab machine connected to the debug board (serial and JTAG) and to USB on the Neo (since this will probably be just a single machine, the roles are not further divided)
+;CARD: machine with a USB-attached SD/MMC card reader
 
 All machines are assumed to share the same filesystem layout. In the title of
-each of the section below, the respective role is indicated. "(all)" is for
+each of the section below, the respective role is indicated. "('''all''')" is for
 settings that apply to all machines, or that - for simplicity - can be
 applied to all of them.
 
@@ -46,7 +37,7 @@ applied to all of them.
 <pre>
 $OMDIR (/home/moko)	base directory for the whole tree
   openmoko/		files from OpenMoko subversion (SVN) repository
-  openembedded/	files from OpenEmbedded (OE) Monotone repository
+  openembedded/		files from OpenEmbedded (OE) Monotone repository
   sources/		cached downloads of OE
   build/		OE build directory
 </pre>
@@ -68,6 +59,7 @@ importance.
 
  export BBPATH=$OMDIR/build:$OMDIR/openmoko/trunk/oe:$OMDIR/openembedded
 
+
 ===  Permissions  ===
 '''(Role: BUILD)'''
 
@@ -85,15 +77,15 @@ There must be at least 7 GB of free space on $OMDIR.
 In addition to the traditional development tools (gcc, patch, etc.), the
 following packages must be installed on the build host:
 
-* subversion	version control system used by OpenMoko and others
-* quilt	patch management system used by the Linux kernel and others
-* monotone	version control system used by OpenEmbedded. Needs a recent version, e.g., 0.32, although also 0.31 should work.
-* diffstat	the OE build process wants this
-* texi2html	this too
-* git		version control system used by the Linux kernel and others. Do not confuse this with the "GNU Interactive Tools"
+;subversion: version control system used by OpenMoko and others
+;quilt:	patch management system used by the Linux kernel and others
+;monotone: version control system used by OpenEmbedded. Needs a recent version, e.g., 0.32, although also 0.31 should work.
+;diffstat: the OE build process wants this
+;texi2html: this too
+;git: version control system used by the Linux kernel and others. Do not confuse this with the "GNU Interactive Tools"
 
 Furthermore, the following package can be installed optionally:
-* psycho	Python just-in-time compiler. Speeds up BitBake considerably. Strongly recommended.
+;psycho: Python just-in-time compiler. Speeds up BitBake considerably. Strongly recommended.
 
 Gentoo users can obtain all this with (note that, at the time of writing, Monotone 0.32 isn't available without setting the ~x86 keyword):
 
@@ -120,7 +112,7 @@ chmod +x $HOME/bin/svn
 '''(Role: LAB)'''
 
 The following package must be installed on the 
-* xc - a simple communications program for the serial port
+;xc: a simple communications program for the serial port
 
 Gentoo users can obtain this with:
  emerge -u xc
